@@ -10,3 +10,6 @@ needed.by.test.zcml
 z3c.testsetup>=0.3
 zope.testbrowser
 zope.testing
+
+[someotherextension]
+we don't bother with this
